--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "config": {
         "preferred-install": "dist",
         "vendor-dir": "src/vendor"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.6"
     }
-	
 }
